--- a/views/index.pug
+++ b/views/index.pug
@@ -13,4 +13,4 @@ block content
     console.log("moreClaps method implemented");
     document.getElementById("target").innerHTML="Clap "+clap_count +" times";
     }
-  a(href="mobile") mobile 
+  a(href="mobiles") mobile 
